feat: permitir rango de fechas y configuracion de zona
